--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <style>
-body{background:#020617;color:#e5e7eb}
-button{font-weight:600}
+body{
+  background:#020617;
+  color:#e5e7eb;
+}
+select,input{
+  color:#000;
+}
 </style>
 </head>
 
@@ -20,10 +25,7 @@ button{font-weight:600}
 <h1 class="text-xl font-bold text-center">🍜 POS ร้านขนมจีน</h1>
 
 <!-- เลือกโต๊ะ -->
-<select id="tableSelect" class="w-full p-2 text-black rounded"
- onchange="selectTable()">
- <option value="">-- เลือกโต๊ะ --</option>
-</select>
+<select id="tableSelect" class="w-full p-2 rounded"></select>
 
 <!-- หมวด -->
 <div id="categoryBar" class="flex gap-2 overflow-x-auto"></div>
@@ -32,265 +34,223 @@ button{font-weight:600}
 <div id="menu" class="grid grid-cols-2 gap-2"></div>
 
 <!-- บิล -->
-<div class="bg-slate-800 p-3 rounded space-y-2">
- <div id="bill"></div>
-
- <div class="border-t pt-2 font-bold">
-  รวม: <span id="total">0</span> บาท
- </div>
-
- <button onclick="sendToKitchen()"
-  class="w-full bg-orange-500 py-2 rounded">
-  🔥 ส่งเข้าครัว
- </button>
+<div class="bg-slate-800 p-3 rounded">
+  <div id="bill"></div>
+  <div class="border-t mt-2 pt-2 font-bold">
+    รวม: <span id="total">0</span> บาท
+  </div>
 </div>
 
-<!-- ชำระเงิน -->
-<div class="flex gap-2">
- <button onclick="checkout('cash')"
-  class="flex-1 bg-emerald-600 py-3 rounded">💵 เงินสด</button>
- <button onclick="checkout('promptpay')"
-  class="flex-1 bg-indigo-600 py-3 rounded">📲 พร้อมเพย์</button>
-</div>
+<!-- ปุ่ม -->
+<button onclick="sendToKitchen()" class="w-full bg-emerald-600 py-3 rounded">
+  📤 ส่งเข้าครัว
+</button>
 
-<!-- ================= MODAL ADDON ================= -->
-<div id="addonModal"
- class="fixed inset-0 bg-black/70 hidden items-center justify-center">
- <div class="bg-slate-800 p-4 rounded w-80 space-y-2">
-  <h2 id="addonTitle" class="font-bold text-center"></h2>
+<!-- ========== MODAL ขนมจีน ========== -->
+<div id="addonModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center">
+  <div class="bg-slate-800 p-4 rounded w-80">
+    <h2 id="addonTitle" class="font-bold mb-2 text-center"></h2>
 
-  <label class="block">
-   <input type="checkbox" id="addonSpecial"> พิเศษ +10
-  </label>
+    <label class="block">
+      <input type="checkbox" id="addonSpecial"> พิเศษ +10
+    </label>
 
-  <label class="block">
-   <input type="checkbox" id="addonMix" onchange="toggleMix()"> ผสมน้ำ +10
-  </label>
+    <label class="block mt-1">
+      <input type="checkbox" id="addonMix" onchange="toggleMix()"> ผสมน้ำ +10
+    </label>
 
-  <select id="mixSelect"
-   class="w-full text-black hidden"></select>
+    <select id="mixSelect" class="w-full mt-1 hidden"></select>
 
-  <button onclick="confirmAddon()"
-   class="bg-emerald-600 w-full py-2 rounded">
-   เพิ่มลงบิล
-  </button>
+    <button onclick="confirmAddon()" class="mt-3 bg-emerald-600 w-full py-2 rounded">
+      เพิ่มลงบิล
+    </button>
 
-  <button onclick="closeAddon()"
-   class="bg-slate-600 w-full py-1 rounded">
-   ยกเลิก
-  </button>
- </div>
+    <button onclick="closeAddon()" class="mt-2 bg-slate-600 w-full py-1 rounded">
+      ยกเลิก
+    </button>
+  </div>
 </div>
 
 <script>
 /* ================= CONFIG ================= */
 const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
-const PROMPTPAY_ID = "0869525072";
-
-const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
+const db = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
 /* ================= STATE ================= */
-let categories=[], products=[], tables=[];
-let currentOrder=null;
-let currentPayment=null;
-let currentProduct=null;
+let tables=[], products=[], categories=[];
+let currentOrder = null;
+let currentProduct = null;
 
 /* ================= INIT ================= */
 async function init(){
- categories=(await db.from('categories').select('*')).data||[];
- products=(await db.from('products').select('*').eq('active',true)).data||[];
- tables=(await db.from('tables').select('*')).data||[];
+  tables = (await db.from('tables').select('*').order('name')).data || [];
+  products = (await db.from('products').select('*').eq('active',true)).data || [];
 
- renderTables();
- renderCategories();
+  categories = [...new Set(products.map(p=>p.category))];
+
+  renderTables();
+  renderCategories();
 }
 init();
 
 /* ================= TABLE ================= */
 function renderTables(){
- tableSelect.innerHTML='<option value="">-- เลือกโต๊ะ --</option>';
- tables.forEach(t=>{
-  tableSelect.innerHTML+=`
-   <option value="${t.id}">${t.name} (${t.status})</option>`;
- });
+  tableSelect.innerHTML = '<option value="">-- เลือกโต๊ะ --</option>';
+  tables.forEach(t=>{
+    tableSelect.innerHTML += `<option value="${t.id}">${t.name}</option>`;
+  });
+  tableSelect.onchange = selectTable;
 }
 
 async function selectTable(){
- const tableId=tableSelect.value;
- if(!tableId) return;
+  const tableId = tableSelect.value;
+  if(!tableId) return;
 
- const { data } = await db.from('orders')
-  .select('*')
-  .eq('table_id',tableId)
-  .eq('status','open')
-  .maybeSingle();
+  const { data } = await db
+    .from('orders')
+    .select('*')
+    .eq('table_id',tableId)
+    .eq('status','open')
+    .single();
 
- currentOrder=data||null;
- loadBill();
+  if(data){
+    currentOrder = data;
+    loadDraftItems();
+  }else{
+    const res = await db.from('orders')
+      .insert({ table_id:tableId, status:'open' })
+      .select()
+      .single();
+    currentOrder = res.data;
+  }
 }
 
 /* ================= CATEGORY ================= */
 function renderCategories(){
- categoryBar.innerHTML='';
- categories.forEach(c=>{
-  const b=document.createElement('button');
-  b.className='bg-slate-700 px-4 py-2 rounded';
-  b.innerText=c.name;
-  b.onclick=()=>loadCategory(c.name);
-  categoryBar.appendChild(b);
- });
+  categoryBar.innerHTML='';
+  categories.forEach(c=>{
+    const b=document.createElement('button');
+    b.className='bg-slate-700 px-4 py-2 rounded';
+    b.innerText=c;
+    b.onclick=()=>loadMenu(c);
+    categoryBar.appendChild(b);
+  });
+  if(categories[0]) loadMenu(categories[0]);
 }
 
-function loadCategory(cat){
- menu.innerHTML='';
- products.filter(p=>p.category===cat).forEach(p=>{
-  const b=document.createElement('button');
-  b.className='bg-slate-700 p-3 rounded';
-  b.innerText=`${p.name}\n${p.price} บาท`;
-  b.onclick=()=>addItem(p);
-  menu.appendChild(b);
- });
+function loadMenu(cat){
+  menu.innerHTML='';
+  products.filter(p=>p.category===cat).forEach(p=>{
+    const b=document.createElement('button');
+    b.className='bg-slate-700 p-3 rounded';
+    b.innerText=`${p.name}\n${p.price} บาท`;
+    b.onclick=()=>addItem(p);
+    menu.appendChild(b);
+  });
 }
 
 /* ================= ADD ITEM ================= */
-async function addItem(p){
- if(!currentOrder){
-  const { data } = await db.from('orders')
-   .insert({table_id:tableSelect.value,status:'open'})
-   .select().single();
-  currentOrder=data;
-  await db.from('tables')
-   .update({status:'busy'})
-   .eq('id',tableSelect.value);
- }
+function addItem(p){
+  if(!currentOrder){
+    Swal.fire('กรุณาเลือกโต๊ะก่อน');
+    return;
+  }
 
- if(p.category==='ขนมจีน'){
-  currentProduct=p;
-  addonTitle.innerText=p.name;
-  buildMixOptions(p.name);
-  addonModal.classList.replace('hidden','flex');
-  return;
- }
+  if(p.category==='ขนมจีน'){
+    currentProduct=p;
+    addonTitle.innerText=p.name;
+    buildMixOptions(p.name);
+    addonModal.classList.replace('hidden','flex');
+    return;
+  }
 
- await insertItem(p.name,p.price);
- loadBill();
+  insertItem(p.name,p.price);
 }
 
 async function insertItem(name,price){
- await db.from('order_items').insert({
-  order_id:currentOrder.id,
-  product_name:name,
-  price:Number(price),
-  qty:1,
-  status:'draft'
- });
+  await db.from('order_items').insert({
+    order_id:currentOrder.id,
+    product_name:name,
+    price:price,
+    qty:1,
+    status:'draft'
+  });
+  loadDraftItems();
 }
 
-/* ================= ADDON ================= */
+/* ================= MIX ================= */
 function buildMixOptions(main){
- mixSelect.innerHTML='<option value="">-- เลือกน้ำ --</option>';
- products.filter(p=>p.category==='ขนมจีน'&&p.name!==main)
-  .forEach(p=>mixSelect.innerHTML+=`<option>${p.name}</option>`);
+  mixSelect.innerHTML='<option value="">-- เลือกน้ำที่ผสม --</option>';
+  products.filter(p=>p.category==='ขนมจีน' && p.name!==main)
+    .forEach(p=>mixSelect.innerHTML+=`<option>${p.name}</option>`);
 }
-
 function toggleMix(){
- mixSelect.classList.toggle('hidden',!addonMix.checked);
+  mixSelect.classList.toggle('hidden',!addonMix.checked);
 }
 
 async function confirmAddon(){
- let name=currentProduct.name;
- let price=currentProduct.price;
- let opt=[];
+  let name=currentProduct.name;
+  let price=currentProduct.price;
+  let opt=[];
 
- if(addonSpecial.checked){price+=10;opt.push('พิเศษ')}
- if(addonMix.checked){
-  if(!mixSelect.value){alert('เลือกน้ำ');return;}
-  price+=10;opt.push(`ผสมน้ำ:${mixSelect.value}`);
- }
+  if(addonSpecial.checked){ price+=10; opt.push('พิเศษ'); }
+  if(addonMix.checked){
+    if(!mixSelect.value) return;
+    price+=10;
+    opt.push(`ผสมน้ำ:${mixSelect.value}`);
+  }
+  if(opt.length) name+=` (${opt.join(',')})`;
 
- if(opt.length) name+=` (${opt.join(', ')})`;
-
- await insertItem(name,price);
- closeAddon();
- loadBill();
-}
-
-function closeAddon(){
- addonModal.classList.replace('flex','hidden');
- addonSpecial.checked=false;
- addonMix.checked=false;
- mixSelect.classList.add('hidden');
+  await insertItem(name,price);
+  closeAddon();
 }
 
 /* ================= BILL ================= */
-async function loadBill(){
- if(!currentOrder){
+async function loadDraftItems(){
+  const { data } = await db
+    .from('order_items')
+    .select('*')
+    .eq('order_id',currentOrder.id)
+    .eq('status','draft');
+
   bill.innerHTML='';
-  total.innerText=0;
-  return;
- }
+  let sum=0;
 
- const { data } = await db.from('order_items')
-  .select('*')
-  .eq('order_id',currentOrder.id);
-
- let sum=0;
- bill.innerHTML='';
- data.forEach(i=>{
-  bill.innerHTML+=`<div>${i.product_name} x ${i.qty}</div>`;
-  sum+=i.price*i.qty;
- });
- total.innerText=sum;
+  data.forEach(i=>{
+    bill.innerHTML+=`<div class="text-sm">${i.product_name} × ${i.qty} = ${i.qty*i.price}</div>`;
+    sum+=i.qty*i.price;
+  });
+  total.innerText=sum;
 }
 
-/* ================= SEND KITCHEN ================= */
+/* ================= SEND TO KITCHEN ================= */
 async function sendToKitchen(){
- if(!currentOrder) return;
- await db.from('order_items')
-  .update({status:'sent'})
-  .eq('order_id',currentOrder.id)
-  .eq('status','draft');
- Swal.fire('ส่งเข้าครัวแล้ว');
+  if(!currentOrder) return;
+
+  await db.from('order_items')
+    .update({ status:'sent' })
+    .eq('order_id',currentOrder.id)
+    .eq('status','draft');
+
+  // 🔥 RESET UI
+  bill.innerHTML='';
+  total.innerText='0';
+
+  Swal.fire({
+    icon:'success',
+    title:'ส่งเข้าครัวแล้ว',
+    timer:1200,
+    showConfirmButton:false
+  });
 }
 
-/* ================= PAYMENT ================= */
-function checkout(type){
- if(!currentOrder) return;
- currentPayment=type;
- const sum=Number(total.innerText);
-
- if(type==='promptpay'){
-  Swal.fire({
-   title:'สแกนจ่าย',
-   html:`<img src="https://promptpay.io/${PROMPTPAY_ID}/${sum}.png">`,
-   confirmButtonText:'รับโอนแล้ว'
-  }).then(r=>{if(r.isConfirmed)confirmPay();});
- }else{
-  Swal.fire({
-   title:`รับเงินสด ${sum} บาท`,
-   confirmButtonText:'รับเงินแล้ว'
-  }).then(r=>{if(r.isConfirmed)confirmPay();});
- }
-}
-
-async function confirmPay(){
- await db.from('orders')
-  .update({
-   status:'paid',
-   total:Number(total.innerText),
-   payment:currentPayment
-  })
-  .eq('id',currentOrder.id);
-
- await db.from('tables')
-  .update({status:'free'})
-  .eq('id',tableSelect.value);
-
- currentOrder=null;
- currentPayment=null;
- loadBill();
- Swal.fire('ชำระเงินเรียบร้อย');
+/* ================= MODAL ================= */
+function closeAddon(){
+  addonModal.classList.replace('flex','hidden');
+  addonSpecial.checked=false;
+  addonMix.checked=false;
+  mixSelect.classList.add('hidden');
 }
 </script>
 
