--- a/index.html
+++ b/index.html
@@ -18,45 +18,19 @@
   <option value="">-- เลือกโต๊ะ --</option>
 </select>
 
-<div id="categoryBar" class="flex gap-2 overflow-x-auto"></div>
 <div id="menu" class="grid grid-cols-2 gap-2"></div>
 
 <div class="bg-slate-800 p-3 rounded">
   <div id="bill"></div>
-  <div class="border-t mt-2 pt-2 text-lg font-bold">
+  <div class="border-t mt-2 pt-2 font-bold">
     รวม: <span id="total">0</span> บาท
   </div>
 </div>
 
 <button onclick="sendToKitchen()"
-  class="w-full bg-orange-500 py-3 rounded font-bold">
+  class="w-full bg-emerald-600 py-3 rounded font-bold">
   🍳 ส่งเข้าครัว
 </button>
-
-<button onclick="cancelOrder()"
-  class="w-full bg-red-600 py-2 rounded">
-  ❌ ยกเลิกออเดอร์
-</button>
-
-<!-- ================= MODAL ADDON ================= -->
-<div id="addonModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center">
-  <div class="bg-slate-800 p-4 rounded w-80">
-    <h2 id="addonTitle" class="font-bold mb-2 text-center"></h2>
-
-    <label><input type="checkbox" id="addonSpecial"> พิเศษ +10</label><br>
-    <label><input type="checkbox" id="addonMix" onchange="toggleMix()"> ผสมน้ำ +10</label>
-
-    <select id="mixSelect" class="w-full text-black mt-1 hidden"></select>
-
-    <button onclick="confirmAddon()" class="mt-3 bg-emerald-600 w-full py-2 rounded">
-      เพิ่มลงบิล
-    </button>
-
-    <button onclick="closeAddon()" class="mt-2 bg-slate-600 w-full py-1 rounded">
-      ยกเลิก
-    </button>
-  </div>
-</div>
 
 <script>
 /* ================= SUPABASE ================= */
@@ -65,149 +39,106 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
 /* ================= STATE ================= */
-let categories=[], products=[], tables=[];
-let cart=[], currentProduct=null;
-let currentOrderId=null;
+let products = [];
+let tables = [];
+let cart = [];
 
 /* ================= INIT ================= */
 async function init(){
-  categories=(await db.from('categories').select('*')).data||[];
-  products=(await db.from('products').select('*').eq('active',true)).data||[];
-  tables=(await db.from('tables').select('*')).data||[];
+  products = (await db.from('products').select('*').eq('active',true)).data || [];
+  tables = (await db.from('tables').select('*').eq('active',true)).data || [];
 
-  renderCategories();
-  if(categories.length) loadCategory(categories[0].name);
-  loadTables();
-}
-
-/* ================= TABLE ================= */
-function loadTables(){
-  tableSelect.innerHTML='<option value="">-- เลือกโต๊ะ --</option>';
   tables.forEach(t=>{
-    tableSelect.innerHTML+=`<option value="${t.id}">${t.name}</option>`;
+    tableSelect.innerHTML += `<option value="${t.id}">${t.name}</option>`;
   });
+
+  renderMenu();
 }
 
-/* ================= CATEGORY ================= */
-function renderCategories(){
-  categoryBar.innerHTML='';
-  categories.forEach(c=>{
-    const b=document.createElement('button');
-    b.className='bg-slate-700 px-4 py-2 rounded';
-    b.innerText=c.name;
-    b.onclick=()=>loadCategory(c.name);
-    categoryBar.appendChild(b);
-  });
-}
-
-function loadCategory(cat){
-  menu.innerHTML='';
-  products.filter(p=>p.category===cat).forEach(p=>{
-    const b=document.createElement('button');
-    b.className='bg-slate-700 p-3 rounded';
-    b.innerText=`${p.name}\n${p.price} บาท`;
-    b.onclick=()=>addItem(p);
+/* ================= MENU ================= */
+function renderMenu(){
+  menu.innerHTML = '';
+  products.forEach(p=>{
+    const b = document.createElement('button');
+    b.className = 'bg-slate-700 p-3 rounded';
+    b.innerText = `${p.name}\n${p.price} บาท`;
+    b.onclick = ()=>addItem(p);
     menu.appendChild(b);
   });
 }
 
-/* ================= ADD ITEM ================= */
 function addItem(p){
-  if(p.category==='ขนมจีน'){
-    currentProduct=p;
-    addonTitle.innerText=`${p.name} (${p.price})`;
-    buildMixOptions(p.name);
-    addonModal.classList.replace('hidden','flex');
-    return;
+  const found = cart.find(i=>i.name===p.name);
+  if(found){
+    found.qty++;
+  }else{
+    cart.push({ name:p.name, price:p.price, qty:1 });
   }
-
-  const f=cart.find(i=>i.name===p.name);
-  f?f.qty++:cart.push({name:p.name,price:p.price,qty:1});
   renderBill();
 }
 
-function buildMixOptions(main){
-  mixSelect.innerHTML='<option value="">-- เลือกน้ำที่ผสม --</option>';
-  products.filter(p=>p.category==='ขนมจีน'&&p.name!==main)
-    .forEach(p=>mixSelect.innerHTML+=`<option>${p.name}</option>`);
-}
-
-function toggleMix(){
-  mixSelect.classList.toggle('hidden',!addonMix.checked);
-}
-
-function confirmAddon(){
-  let name=currentProduct.name, price=currentProduct.price, opt=[];
-  if(addonSpecial.checked){price+=10;opt.push('พิเศษ')}
-  if(addonMix.checked){
-    if(!mixSelect.value)return alert('เลือกน้ำ');
-    price+=10;opt.push(`ผสมน้ำ:${mixSelect.value}`);
-  }
-  if(opt.length)name+=` (${opt.join(', ')})`;
-  const f=cart.find(i=>i.name===name);
-  f?f.qty++:cart.push({name,price,qty:1});
-  closeAddon();renderBill();
-}
-
-function closeAddon(){
-  addonModal.classList.replace('flex','hidden');
-  addonSpecial.checked=false;addonMix.checked=false;
-  mixSelect.value='';mixSelect.classList.add('hidden');
-}
-
-/* ================= BILL ================= */
 function renderBill(){
-  bill.innerHTML='';let sum=0;
+  bill.innerHTML='';
+  let sum=0;
   cart.forEach((i,idx)=>{
     sum+=i.price*i.qty;
     bill.innerHTML+=`
-      <div class="flex justify-between border-b py-1">
-        ${i.name} × ${i.qty}
-        <button onclick="removeItem(${idx})">✕</button>
-      </div>`;
+      <div class="flex justify-between text-sm">
+        <span>${i.name} x${i.qty}</span>
+        <span>${i.price*i.qty}</span>
+      </div>
+    `;
   });
   total.innerText=sum;
 }
 
-function removeItem(i){cart.splice(i,1);renderBill();}
-
 /* ================= SEND TO KITCHEN ================= */
 async function sendToKitchen(){
-  if(!cart.length)return alert('ไม่มีรายการ');
-  if(!tableSelect.value)return alert('เลือกโต๊ะ');
-
-  if(!currentOrderId){
-    const {data}=await db.from('orders')
-      .insert({table_id:tableSelect.value,status:'open'})
-      .select().single();
-    currentOrderId=data.id;
+  if(!cart.length){
+    Swal.fire('ยังไม่มีรายการ');
+    return;
+  }
+  if(!tableSelect.value){
+    Swal.fire('กรุณาเลือกโต๊ะ');
+    return;
   }
 
+  // 1️⃣ create order
+  const { data:order } = await db.from('orders')
+    .insert({
+      table_id: tableSelect.value,
+      status:'open'
+    })
+    .select()
+    .single();
+
+  // 2️⃣ create order items
   for(const i of cart){
     await db.from('order_items').insert({
-      order_id:currentOrderId,
-      product_name:i.name,
-      price:i.price,
-      qty:i.qty
+      order_id: order.id,
+      product_name: i.name,
+      price: i.price,
+      qty: i.qty
     });
   }
 
-  /* 🔥 รีเซตหน้าจอ (ไม่รื้อ logic เดิม) */
-  cart=[];
-  renderBill();
-  closeAddon();
+  // 3️⃣ 🔥 broadcast แจ้งครัว
+  await db.channel('notify-kitchen').send({
+    type:'broadcast',
+    event:'new_order',
+    payload:{ order_id: order.id }
+  });
 
-  Swal.fire({icon:'success',title:'ส่งเข้าครัวแล้ว'});
+  // 4️⃣ reset หน้าจอ (ไม่ปิดโต๊ะ)
+  cart = [];
+  renderBill();
+
+  Swal.fire({
+    icon:'success',
+    title:'ส่งเข้าครัวแล้ว'
+  });
 }
 
-/* ================= CANCEL ================= */
-function cancelOrder(){
-  cart=[];
-  renderBill();
-  closeAddon();
-}
-
-/* ================= START ================= */
 init();
 </script>
 
