--- a/index.html
+++ b/index.html
@@ -2,200 +2,205 @@
 <html lang="th">
 <head>
 <meta charset="UTF-8">
+<title>🍜 POS หน้าร้าน</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>🍜 POS ร้านขนมจีน</title>
-
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.tailwindcss.com"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 
-<body class="bg-slate-900 text-white p-3 space-y-3">
+<body class="bg-slate-900 text-white min-h-screen">
 
-<h1 class="text-xl font-bold text-center">🍜 POS ร้านขนมจีน</h1>
+<div class="max-w-7xl mx-auto p-4 grid grid-cols-12 gap-4">
 
-<!-- เลือกโต๊ะ -->
-<select id="tableSelect" class="w-full p-2 text-black rounded">
-  <option value="">-- เลือกโต๊ะ --</option>
-</select>
-
-<!-- เมนู -->
-<div id="menu" class="grid grid-cols-2 gap-2"></div>
-
-<!-- บิล -->
-<div class="bg-slate-800 p-3 rounded">
-  <div id="bill"></div>
-  <div class="border-t border-slate-600 mt-2 pt-2 text-lg font-bold">
-    รวม: <span id="total">0</span> บาท
+  <!-- ===== โต๊ะ ===== -->
+  <div class="col-span-3 bg-slate-800 rounded-xl p-4">
+    <h2 class="text-xl font-bold mb-3">🪑 โต๊ะว่าง</h2>
+    <div id="tableList" class="grid grid-cols-2 gap-2"></div>
   </div>
+
+  <!-- ===== เมนู ===== -->
+  <div class="col-span-5 bg-slate-800 rounded-xl p-4">
+    <h2 class="text-xl font-bold mb-3">📋 เมนู</h2>
+    <div id="menuList" class="space-y-2"></div>
+  </div>
+
+  <!-- ===== ออร์เดอร์ / คิดเงิน ===== -->
+  <div class="col-span-4 bg-slate-800 rounded-xl p-4">
+    <h2 class="text-xl font-bold mb-3">
+      🧾 ออร์เดอร์ โต๊ะ <span id="currentTable">-</span>
+    </h2>
+
+    <div id="orderItems" class="space-y-2 mb-4"></div>
+
+    <div class="border-t border-slate-600 pt-3">
+      <div class="flex justify-between text-lg font-bold">
+        <span>รวม</span>
+        <span id="totalPrice">0</span>
+      </div>
+
+      <button onclick="payOrder()"
+        class="w-full mt-4 bg-green-600 hover:bg-green-700 py-2 rounded-lg font-bold">
+        💰 คิดเงิน
+      </button>
+    </div>
+  </div>
+
 </div>
 
-<!-- ส่งครัว -->
-<button onclick="sendToKitchen()"
-  class="w-full bg-emerald-600 py-3 rounded font-bold">
-  🍳 ส่งเข้าครัว
-</button>
-
 <script>
-/* ================= SUPABASE ================= */
-const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
+/* ================== CONFIG ================== */
+const supabase = supabase.createClient(
+  "https://nvsptbbvxjulrpdebrhn.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
+)
 
-const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+let currentOrderId = null
+let currentTableId = null
 
-/* ================= STATE ================= */
-let products = [];
-let tables = [];
-let cart = [];
+/* ================== LOAD TABLES ================== */
+async function loadTables() {
+  const { data } = await supabase
+    .from("tables")
+    .select("*")
+    .eq("status", "available")
+    .order("table_no")
 
-/* ================= INIT ================= */
-async function init(){
-
-  /* โหลดเมนู */
-  const { data:productData, error:productErr } =
-    await db.from('products')
-      .select('*')
-      .eq('active', true);
-
-  if(productErr){
-    console.error(productErr);
-    Swal.fire('โหลดเมนูไม่สำเร็จ');
-    return;
-  }
-
-  products = productData || [];
-
-  /* โหลดโต๊ะ (แก้ boolean ถูกต้อง) */
-  const { data } = await db
-  .from('tables')
-  .select('*');
-
-
-  if(tableErr){
-    console.error(tableErr);
-    Swal.fire('โหลดโต๊ะไม่สำเร็จ');
-    return;
-  }
-
-  tables = tableData || [];
-
-  /* เติม select โต๊ะ */
-  tableSelect.innerHTML = '<option value="">-- เลือกโต๊ะ --</option>';
-  tables.forEach(t=>{
-    tableSelect.innerHTML += `<option value="${t.id}">${t.name}</option>`;
-  });
-
-  renderMenu();
+  tableList.innerHTML = ""
+  data.forEach(t => {
+    const btn = document.createElement("button")
+    btn.className = "bg-green-600 hover:bg-green-700 p-3 rounded-lg font-bold"
+    btn.innerText = "โต๊ะ " + t.table_no
+    btn.onclick = () => openTable(t)
+    tableList.appendChild(btn)
+  })
 }
 
-/* ================= MENU ================= */
-function renderMenu(){
-  menu.innerHTML = '';
-  products.forEach(p=>{
-    const btn = document.createElement('button');
-    btn.className = 'bg-slate-700 p-3 rounded';
-    btn.innerText = `${p.name}\n${p.price} บาท`;
-    btn.onclick = ()=>addItem(p);
-    menu.appendChild(btn);
-  });
+/* ================== OPEN TABLE ================== */
+async function openTable(table) {
+  const { data: order } = await supabase
+    .from("orders")
+    .insert({ table_id: table.id, status: "open" })
+    .select()
+    .single()
+
+  await supabase
+    .from("tables")
+    .update({ status: "occupied", current_order_id: order.id })
+    .eq("id", table.id)
+
+  currentOrderId = order.id
+  currentTableId = table.id
+  currentTable.innerText = table.table_no
+
+  loadOrderItems()
+  loadTables()
 }
 
-function addItem(p){
-  const found = cart.find(i=>i.name===p.name);
-  if(found){
-    found.qty++;
-  }else{
-    cart.push({
-      name:p.name,
-      price:p.price,
-      qty:1
-    });
-  }
-  renderBill();
-}
+/* ================== LOAD MENU ================== */
+async function loadMenu() {
+  const { data } = await supabase
+    .from("products")
+    .select("*")
+    .eq("active", true)
 
-/* ================= BILL ================= */
-function renderBill(){
-  bill.innerHTML='';
-  let sum = 0;
+  menuList.innerHTML = ""
+  data.forEach(p => {
+    const div = document.createElement("div")
+    div.className = "bg-slate-700 p-3 rounded-lg"
 
-  cart.forEach((i,idx)=>{
-    sum += i.price * i.qty;
-    bill.innerHTML += `
-      <div class="flex justify-between text-sm">
-        <span>${i.name} × ${i.qty}</span>
-        <span>${i.price * i.qty}</span>
+    div.innerHTML = `
+      <div class="font-bold">${p.name} - ${p.price}฿</div>
+      <div class="flex gap-2 mt-2">
+        <label><input type="checkbox" id="sp_${p.id}"> พิเศษ</label>
+        <label><input type="checkbox" id="mix_${p.id}"> ผสมน้ำ</label>
+        <button class="ml-auto bg-blue-600 px-3 rounded"
+          onclick="addItem('${p.id}', ${p.price})">+</button>
       </div>
-    `;
-  });
-
-  total.innerText = sum;
+    `
+    menuList.appendChild(div)
+  })
 }
 
-/* ================= SEND TO KITCHEN ================= */
-async function sendToKitchen(){
+/* ================== ADD ITEM ================== */
+async function addItem(productId, price) {
+  if (!currentOrderId) return alert("เลือกโต๊ะก่อน")
 
-  if(!tableSelect.value){
-    Swal.fire('กรุณาเลือกโต๊ะ');
-    return;
-  }
-  if(!cart.length){
-    Swal.fire('ยังไม่มีรายการ');
-    return;
-  }
+  const special = document.getElementById("sp_" + productId)?.checked
+  const mix = document.getElementById("mix_" + productId)?.checked
 
-  /* 1️⃣ สร้าง order */
-  const { data:order, error:orderErr } =
-    await db.from('orders')
-      .insert({
-        table_id: tableSelect.value,
-        status: 'open'
-      })
-      .select()
-      .single();
-
-  if(orderErr){
-    console.error(orderErr);
-    Swal.fire('สร้างบิลไม่สำเร็จ');
-    return;
-  }
-
-  /* 2️⃣ เพิ่ม order_items */
-  for(const i of cart){
-    const { error:itemErr } =
-      await db.from('order_items').insert({
-        order_id: order.id,
-        product_name: i.name,
-        price: i.price,
-        qty: i.qty
-      });
-
-    if(itemErr){
-      console.error(itemErr);
-      Swal.fire('บันทึกรายการอาหารไม่สำเร็จ');
-      return;
-    }
-  }
-
-  /* 3️⃣ 🔥 แจ้งครัว realtime */
-  await db.channel('notify-kitchen').send({
-    type:'broadcast',
-    event:'new_order',
-    payload:{ order_id: order.id }
-  });
-
-  /* 4️⃣ reset หน้าจอ */
-  cart = [];
-  renderBill();
-
-  Swal.fire({
-    icon:'success',
-    title:'ส่งเข้าครัวแล้ว'
-  });
+  await supabase.from("order_items").insert({
+    order_id: currentOrderId,
+    product_id: productId,
+    qty: 1,
+    price,
+    option_special: special,
+    option_mix: mix,
+    status: "pending"
+  })
 }
 
-/* ================= START ================= */
-init();
+/* ================== LOAD ORDER ITEMS ================== */
+async function loadOrderItems() {
+  if (!currentOrderId) return
+
+  const { data } = await supabase
+    .from("order_items")
+    .select("*, products(name)")
+    .eq("order_id", currentOrderId)
+
+  let total = 0
+  orderItems.innerHTML = ""
+
+  data.forEach(i => {
+    total += i.price * i.qty
+    const div = document.createElement("div")
+    div.className = "bg-slate-700 p-2 rounded"
+    div.innerText =
+      `${i.products.name} ${i.option_special ? "(พิเศษ)" : ""} ${i.option_mix ? "(ผสมน้ำ)" : ""}`
+    orderItems.appendChild(div)
+  })
+
+  totalPrice.innerText = total + " ฿"
+}
+
+/* ================== PAY ================== */
+async function payOrder() {
+  if (!currentOrderId) return
+
+  await supabase.from("orders")
+    .update({ status: "paid" })
+    .eq("id", currentOrderId)
+
+  await supabase.from("tables")
+    .update({ status: "available", current_order_id: null })
+    .eq("id", currentTableId)
+
+  alert("ชำระเงินเรียบร้อย")
+
+  currentOrderId = null
+  currentTableId = null
+  currentTable.innerText = "-"
+  orderItems.innerHTML = ""
+  totalPrice.innerText = "0"
+
+  loadTables()
+}
+
+/* ================== REALTIME ================== */
+supabase.channel("realtime-pos")
+  .on("postgres_changes",
+    { event: "*", schema: "public", table: "order_items" },
+    loadOrderItems
+  )
+  .on("postgres_changes",
+    { event: "*", schema: "public", table: "tables" },
+    loadTables
+  )
+  .subscribe()
+
+/* ================== INIT ================== */
+loadTables()
+loadMenu()
 </script>
 
 </body>
